tools/it-tools/it-tools-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools-ui
  namespace: default
spec:
  selector:
    app: it-tools
  ports:
    - port: 80
