tools/it-tools/it-tools-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-route
  namespace: default # Where your application is deployed
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "tools.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        # Use backendRefs for Gateway API v1beta1
        - name: it-tools-ui
          port: 80
